fix: alt preload to remove image warning and fix layout shift

--- a/app/ui/Rasp/Rasp.module.css
+++ b/app/ui/Rasp/Rasp.module.css
@@ -24,8 +24,10 @@
 
 .raspImg {
   composes: imgShared;
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
   display: block;
+  aspect-ratio: 1;
   /* border-radius: 8px 8px 0 0; */
 }
 
