--- a/app/ui/WindGraph/WindGraph.module.css
+++ b/app/ui/WindGraph/WindGraph.module.css
@@ -44,6 +44,7 @@
 .fallback {
   height: 300px;
   width: 100%;
+  max-width: 100%;
   margin-bottom: 23px;
   background-color: rgba(var(--callout-rgb), 0.5);
   border: 1px solid rgba(var(--callout-border-rgb), 0.3);
